name:                epimetheus
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/doublecrowngaming/epimetheus
license:             BSD3
license-file:        LICENSE
author:              Jesse Kempf
maintainer:          jesse.kempf@doublecrown.co
copyright:           2019 Double Crown Gaming Co.
category:            metrics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.6.5

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Prometheus.Format.Parse
                     , Prometheus.Format.Render
                     , Prometheus.Format.Type
                     , Prometheus.Proxy
                     , Prometheus.Conduit
  other-modules:       Network.Wai.Conduit
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , binary
                     , bytestring
                     , conduit
                     , conduit-extra
                     , exceptions
                     , hslogger
                     , http-client
                     , http-conduit
                     , http-types
                     , resourcet
                     , scientific
                     , text
                     , unliftio-core
                     , wai
                     , warp

executable epimetheus
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       LabelSource
                     , Settings
  build-depends:       base
                     , bytestring
                     , epimetheus
                     , exceptions
                     , hslogger
                     , optparse-applicative
                     , process
                     , yaml
test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Prometheus.FormatSpec
  build-depends:       attoparsec
                     , base
                     , bytestring
                     , epimetheus
                     , hspec
                     , QuickCheck
                     , quickcheck-instances

source-repository head
  type:     git
  location: https://github.com/doublecrowngaming/epimetheus
